0.6.3/README.md
# Important

<p align="center">
<h2>
Coalition Engine
</h2>

A modern Undertale engine developed by [Eden](https://gamejolt.com/@Edens_studio), [Panthervention](https://gamejolt.com/@Panthervention), [RTF](https://gamejolt.com/@RTFTR)
</p>

Coalition Engine is an Undertale engine that aims to create the most optimized environment to maximize player experience.

This engine features:
- Existing documentation (how is this even a feature, it's supposed to be a basic thing)
- Potential cross platform support
- Safe data saving
- Optimized polygon board
- Anti-UTMT support

**What platforms does this engine support?**

Potentially every, although some platforms are not fully tested due to the lack of use (such as HTML) and platforms we don't do test on a regular basis.

**Which Game Maker version should I use to use this engine?**

Since this engine is developed in 2023.11.1.129 as of now, this will be the minimal version of GM required, note that this engine is rather dependant on external libraries so you may need to update GM to match their minimal versions.

**I encountered a bug on XXX, how do I fix it?**

You can file a bug report on Github using 'Issues', or use the bug report channel on the [official Discord server](https://discord.gg/VyYghseRHf), both are acceptable!

**You didn't add a feature that was in Undertale!/There is a feature that would be cool to add!**

Good! You proved that we are idiots! Go put your suggestion on the suggestions channel in our server!

## Need to know
You should not edit anything in (System) unless you have some degree of GML knowledge.
Folders marked with '()' i.e. (Camera) can be removed if you do not need them as these functions
only acts as easy access to the static functions for lesser experienced users.

Everything else is what you should edit, but be aware that engine updates may overwrite your code,
so you should create backups of your project before updating the engine version.

If you have little to no GML knowledge, you should look up the Game Maker Manual or at least Google before asking questions like "How do I make an object" or "I don't know how to use this Game Maker function".


